--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,7 +1,7 @@
 .homeContainer {
   align-content: center;
   /* border: 1px solid red; */
-  height: auto;
+  height: auto; 
   width: 100%;
   background-color: black;
   padding: 0 2%;
@@ -14,10 +14,19 @@
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   flex-direction: column;
   gap: 2%;
   margin: 5% 0;
+}
+
+.homepageCardSection2{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid green; */
+  flex-direction: column;
+  margin-bottom: 2%;
 }
 
 .secondaryHeading {
@@ -48,7 +57,7 @@
 
 .achievementsContainer{
     width: 100%;
-    border: 1px solid green;
+    /* border: 1px solid green; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -63,4 +72,92 @@
 
 .achievementsSubContainer h3{
     margin-bottom: 20px;
+}
+
+.highlightsdiv{
+  border: 1px solid rgba(245, 245, 245, 0.644);
+  height: 500px;
+  /* overflow: hidden; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  width: 100%;
+  /* padding: 5%; */
+  border-radius: 20px;
+  margin: 1% 0;
+}
+
+.highlightleft{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* border: 1px solid blue; */
+  width: 40%;
+  height: 100%;
+}
+
+.highlightleft img{
+  height: 100%;
+  width: 100%;
+  border-radius: 20px;
+  object-fit: cover;
+}
+
+.highlightright{
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  /* border: 1px solid red; */
+  width: 60%;
+  height: 100%;
+  padding: 5%;
+}
+
+.highlightright ul{
+  color: white;
+  /* height: 100%; */
+}
+
+.highlightright ul li{
+  color: white;
+  list-style-type: disc;
+  font-size: 20px;
+  
+  /* height: 100%; */
+}
+
+.headingSection{
+  /* border: 1px solid yellow; */
+  height: 150px;
+  width: 100%;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
+  margin-bottom: 40px;
+}
+
+.headingSection h2{
+  font-size: 35px;
+  font-weight: bolder;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.hashSection{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: row;
+  width: 100%;
+  /* border: 1px solid red;   */
+}
+
+.cards{
+    border-bottom: 1px solid #8080809f;
+    background-color: black;
 }
