--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,15 @@
 @import "tailwindcss";
 
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body{
-    background-color: #0000 !important;
+#root {
+  background-color: black;
+}
 
+body {
+  background-color: black !important;
 }
