--- a/src/pages/Programs.css
+++ b/src/pages/Programs.css
@@ -2,10 +2,7 @@
    padding: 0 2%;
 }
 
-.imgcontainer{
-    /* border: 1px solid red; */
 
-}
 
 .imgcontainer img{
     object-fit: contain;
@@ -20,4 +17,17 @@
     border-top: 1px solid #8080809f;
     padding: 0;
     margin: 0;
+}
+
+.AboutCardsAboutContainer{
+    /* margin-top: 5%; */
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+    gap: 7%;
+    margin-bottom: 15px;
+
 }
