--- a/src/components/DevelopersPage.css
+++ b/src/components/DevelopersPage.css
@@ -1,6 +1,6 @@
 .DevelopersPageMainContainer{
   /* border: 1px solid red; */
-  width: 100vw;
+  width: 100%;
   height:auto;
   display: flex;
   align-items: center;
