--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -31,7 +31,7 @@
   width: auto;
   object-fit: contain;
   margin-right: 10px;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   height: 100%;
 }
 
