--- a/src/components/first.css
+++ b/src/components/first.css
@@ -28,3 +28,22 @@
     font-size: 18px;
     text-align: center;
 }
+
+
+@media screen and (max-width: 768px) {
+    .FirstHashContainer{
+        height: auto;
+        width: 100%;
+        padding: 5%;
+        
+    }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+  .FirstHashContainer{
+        height: auto;
+        width: 100%;
+        padding: 5%;
+        
+    }
+}
