--- a/src/components/AboutCards.css
+++ b/src/components/AboutCards.css
@@ -189,6 +189,11 @@
     padding-bottom: 20px;
     height: 100%;
     width: 100%;
+    gap: 10px;
+  }
+
+  .AboutCardsContainerLeft h3{
+    font-size: 22px;
   }
 
   .AboutCardsContainerLeft p {
