--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -96,3 +96,37 @@
   gap: 20px;
   font-size: 30px;
 }
+
+
+@media screen and (max-width: 768px) {
+
+  footer{
+    z-index: 1001;
+  }
+
+
+
+  .footerleftupperContainer{
+    /* border: 1px solid yellow; */
+    flex-direction: column;
+  }
+
+  .footerleftupperContainer img{
+    width: 50%;
+  }
+
+  .footerleftupperContainer h1{
+    font-size: 18px;
+  }
+
+  .footerrightContainer{
+    flex-direction: column;
+    /* border: 1px solid blue; */
+
+  }
+
+  .footerleftbottomContainer p{
+    /* border: 1px solid blue; */
+    font-size: 14px;
+  }
+}
